[package]
name = "solforge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.120"
solana-client = "2.0.1"
solana-pubsub-client = "2.0.1"
solana-rpc-client-api = "2.0.1"
solana-sdk = "2.0.1"
solana-transaction-status = "2.0.1"
thiserror = "1.0.61"
tokio = "1.38.0"
tower-http = { version = "0.5.2", features = ["cors"] }
